--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "start": "node ./dist/index.js"
+    "start": "tsc && node ./dist/src/index.js"
   },
   "repository": {
     "type": "git",
